# signal-persona-spirit

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  flake.nix  schema.nota  skills.md  spirit.schema
examples/: canonical.nota
schema/: signal-persona-spirit.concept.schema
schemas/signal-sema/: magnitude.schema  sema.schema
src/: lib.rs  migration.rs
tests/: box_form.rs  full_schema.rs  migration.rs  round_trip.rs  schema_module.rs  short_header.rs
