[package]
name         = "signal-persona-spirit"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-persona-spirit"
description  = "Signal contract for the ordinary persona-spirit surface."
publish      = false

[lib]
name = "signal_persona_spirit"
path = "src/lib.rs"

[dependencies]
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-sema  = { git = "https://github.com/LiGoldragon/signal-sema.git", branch = "main" }
nota-box     = { git = "https://github.com/LiGoldragon/nota.git", branch = "main", package = "nota-box" }
nota-codec   = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror    = "2"
version-projection = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
